--- a/styles.css
+++ b/styles.css
@@ -147,10 +147,12 @@ h1 img{
   /* background: linear-gradient(90deg, rgba(192,86,70,1) 0%, rgba(127,118,85,1) 50%, rgba(100,154,34,1) 100%); */
 }
 
-.symbol{
+.tile{
   width: 100%;
   height: auto;
   border-radius: 50%;
+  position: relative;
+  z-index: 2;
   /* border-color: orange; */
   /* border-style: solid; */
 }
@@ -200,6 +202,7 @@ h1 img{
 
 #ttt-grid{
   position: absolute;
+  z-index: 1;
   width: 100%;
   height: 100%;
   min-width: 17.5rem;
