--- a/styles.css
+++ b/styles.css
@@ -144,7 +144,6 @@ h1 img{
   grid-gap: 1em;
   align-items: center;
   justify-content: center;
-  /* background: linear-gradient(90deg, rgba(192,86,70,1) 0%, rgba(127,118,85,1) 50%, rgba(100,154,34,1) 100%); */
 }
 
 .tile{
@@ -160,10 +159,34 @@ h1 img{
   /* border-style: solid; */
 }
 
-.invisible{
+.invisible-placeholder{
   width: 100%;
   height: 100%;
   opacity: 0;
+}
+
+.invisible{
+  width: 40%;
+  height: 40%;
+  opacity: 0;
+  position: absolute;
+  z-index: 0;
+  transition: all .6s;
+}
+
+.kablam{
+  width: 100%;
+  height: 100%;
+  opacity: 100%;
+  z-index: 4;
+}
+
+.overlay{
+  width: 100%;
+  height: 100%;
+  background-color:rgb(0, 0, 0, 0.40);
+  position: absolute;
+  z-index: 3;
 }
 
 .empty{
@@ -220,4 +243,8 @@ h1 img{
   box-shadow: black 2px 1px 15px 2px;
   /* border-color: red; */
   /* border-style: double; */
+}
+
+.hidden{
+  display: none;
 }
