--- a/styles.css
+++ b/styles.css
@@ -159,7 +159,7 @@ h1 img{
   /* border-style: solid; */
 }
 
-.invisible-placeholder{
+.placeholder{
   width: 100%;
   height: 100%;
   opacity: 0;
