Announce the player that won on game win. Formatting.

--- a/styles.css
+++ b/styles.css
@@ -59,14 +59,11 @@ main{
 #section-left{
   background: url('assets/ruby-player-bg.jpg')  #660500;
   background-size: 100% 100%;
-  font-family: 'Ruby';
-  font-size: 22px;
-  letter-spacing: 1pt;
-  color: #fdd;
   border-color: #ee9082;
   border-style: solid;
   box-shadow: 10px 0 30px 6px rgba(60,0,0,0.85);
-  /* position: relative; */
+  font-size: 22px;
+  color: #fdd;
 }
 
 #section-left .div-player-score{
@@ -81,13 +78,10 @@ main{
 #section-right{
   background: url('assets/js-player-bg.jpg') #4a943e;
   background-size: 100% 100%;
-  font-family: 'Noise Machine';
-  font-size: 22px;
-  letter-spacing: 2pt;
-  color: #81cf08;
   border-color: yellow;
   border-style: solid;
   box-shadow: -10px 0 30px 6px rgba(0,60,0,0.85);
+  font-size: 22px;
 }
 
 #section-right .div-player-score{
@@ -102,7 +96,7 @@ main{
   text-align: center;
   justify-content: center;
   min-width: 9em;
-  border-radius: 9%;
+  border-radius: 2em;
   padding: .5em;
 }
 
@@ -117,15 +111,10 @@ main{
 }
 
 h1{
-  font-family: 'Fight';
-  letter-spacing: 1px;
   display: flex;
   align-items: center;
   justify-content: center;
-  text-shadow: black 0.1em 0.1em 0.3em;
   background-color:rgb(70, 72, 62, 0.40);
-  border-radius: 3em;
-  padding: .5em 0;
 }
 
 h1 img{
@@ -168,10 +157,14 @@ h1 img{
 .invisible{
   width: 40%;
   height: 40%;
+  font-size: 1em;
   opacity: 0;
   position: absolute;
   z-index: 0;
   transition: all .6s;
+  box-shadow: black 0 0 0 0;
+  text-shadow: black 0em 0em 0em;
+  color: white;
 }
 
 .kablam{
@@ -179,6 +172,19 @@ h1 img{
   height: 100%;
   opacity: 100%;
   z-index: 4;
+}
+
+.exclaim{
+  transition-property: opacity, box-shadow, color;
+  box-shadow: black 0px 0px 50px 15px;
+  text-shadow: black 1em 1em 0.3em;
+  height: 1em;
+  width: 100%;
+  font-size: 4em;
+  z-index: 5;
+  bottom: 15%;
+  opacity: 100%;
+  color: #cc413a;
 }
 
 .overlay{
@@ -200,11 +206,11 @@ h1 img{
   opacity: .6;
 }
 
-.js{
+.js-bg{
   background: radial-gradient(rgba(192,86,70,1) 0%, rgba(127,118,85,1) 50%, rgba(100,154,34,1) 100%);
 }
 
-.ruby{
+.ruby-bg{
     background: radial-gradient(rgba(100,154,34,1) 0%, rgba(127,118,85,1) 50%, rgba(192,86,70,1) 100%);
 }
 
@@ -247,4 +253,23 @@ h1 img{
 
 .hidden{
   display: none;
+}
+
+.fight-font{
+  font-family: 'Fight';
+  letter-spacing: 1px;
+  text-shadow: black 0.1em 0.1em 0.3em;
+  border-radius: 1em;
+  padding: .5em 0;
+}
+
+.js-font{
+  font-family: 'Noise Machine';
+  letter-spacing: 2pt;
+  color: #81cf08;
+}
+
+.ruby-font{
+  font-family: 'Ruby';
+  letter-spacing: 1pt;
 }
