--- a/styles.css
+++ b/styles.css
@@ -103,8 +103,7 @@ main{
 #section-middle{
   padding: 2em;
   text-align: center;
-  height: 100%;
-  min-height: 100%;
+  height: min-content;
   min-width: 17.5em;
   margin: 1.5em;
   background: radial-gradient(circle, rgba(185,161,87,1) 25%, rgba(162,145,92,1) 60%, rgba(167,152,106,1) 89%);
@@ -155,9 +154,8 @@ h1 img{
 }
 
 .invisible{
-  width: 40%;
-  height: 40%;
-  font-size: 1em;
+  width: 100%;
+  height: 1em;
   opacity: 0;
   position: absolute;
   z-index: 0;
@@ -168,23 +166,37 @@ h1 img{
 }
 
 .kablam{
+  width: 40%;
+  height: 40%;
+}
+
+
+.show-kablam{
   width: 100%;
   height: 100%;
-  opacity: 100%;
+  opacity: 1;
   z-index: 4;
 }
 
+.fade{
+  opacity: 0;
+}
+
 .exclaim{
-  transition-property: opacity, box-shadow, color;
+  bottom: 15%;
+  font-size: 4em;
+  transition-property: color, box-shadow, text-shadow, opacity, z-index;
+  transition-duration: .6s;
+}
+
+.show-exclaim{
   box-shadow: black 0px 0px 50px 15px;
   text-shadow: black 1em 1em 0.3em;
-  height: 1em;
-  width: 100%;
-  font-size: 4em;
-  z-index: 5;
-  bottom: 15%;
   opacity: 100%;
   color: #cc413a;
+  z-index: 5;
+  transition-property: color, box-shadow, text-shadow, opacity;
+  transition-duration: 1s;
 }
 
 .overlay{
@@ -272,4 +284,9 @@ h1 img{
 .ruby-font{
   font-family: 'Ruby';
   letter-spacing: 1pt;
+}
+
+.draw{
+  background-color:rgb(70, 72, 62, 0.40);
+  color: white;
 }
