--- a/styles.css
+++ b/styles.css
@@ -114,6 +114,7 @@ h1{
   align-items: center;
   justify-content: center;
   background-color:rgb(70, 72, 62, 0.40);
+  padding: .5em 0;
 }
 
 h1 img{
@@ -263,6 +264,23 @@ h1 img{
   /* border-style: double; */
 }
 
+.cb{
+  font-size: 20px;
+  background-color: #7a6a38;
+  border-color: #6e591c;
+  padding: .5em;
+  margin-top: 1em;
+}
+
+.cb:hover{
+  background-color: #a4831e;
+}
+
+.cb:disabled{
+  color: #222;
+  background-color: #a39360;
+}
+
 .hidden{
   display: none;
 }
@@ -272,7 +290,6 @@ h1 img{
   letter-spacing: 1px;
   text-shadow: black 0.1em 0.1em 0.3em;
   border-radius: 1em;
-  padding: .5em 0;
 }
 
 .js-font{
