--- a/styles.css
+++ b/styles.css
@@ -68,11 +68,13 @@ main{
 
 #section-left .div-player-score{
   background-color:rgb(255, 144, 130, 0.40);
-
 }
 
 #section-left h2{
   text-shadow: black 0.1em 0.1em .1em;
+}
+#section-left button{
+  background-color: #a41b0e;
 }
 
 #section-right{
@@ -90,6 +92,10 @@ main{
 
 #section-right h2{
     text-shadow: black 0.1em 0.1em 0.2em;
+}
+
+#section-right button{
+  background-color: #5d7859;
 }
 
 .div-player-score{
@@ -264,7 +270,7 @@ h1 img{
   /* border-style: double; */
 }
 
-.cb{
+.clear-button{
   font-size: 20px;
   background-color: #7a6a38;
   border-color: #6e591c;
@@ -272,13 +278,24 @@ h1 img{
   margin-top: 1em;
 }
 
-.cb:hover{
+.clear-button:hover{
   background-color: #a4831e;
 }
 
-.cb:disabled{
+.clear-button:disabled{
   color: #222;
   background-color: #a39360;
+}
+
+.button{
+  margin-top: .75em;
+  width: 100%;
+}
+
+.change-player-input input{
+  width: 100%;
+  text-align: center;
+  margin-top: .5em;
 }
 
 .hidden{
@@ -295,15 +312,20 @@ h1 img{
 .js-font{
   font-family: 'Noise Machine';
   letter-spacing: 2pt;
-  color: #81cf08;
+  color: #ace852;
 }
 
 .ruby-font{
   font-family: 'Ruby';
   letter-spacing: 1pt;
+  color: #fdd;
 }
 
 .draw{
   background-color:rgb(70, 72, 62, 0.40);
   color: white;
+}
+
+.medium-font-size{
+  font-size: 1.5em;
 }
