--- a/styles.css
+++ b/styles.css
@@ -208,10 +208,12 @@ h1 img{
 }
 
 .exclaim{
+  height: min-content;
   bottom: 15%;
   font-size: 4em;
   transition-property: color, box-shadow, text-shadow, opacity, z-index;
   transition-duration: .6s;
+  /* padding-bottom: .75em; */
 }
 
 .show-exclaim{
