--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,35 @@ section{
   padding: .5em;
 }
 
+.AI{
+  margin: 0;
+  display: grid;
+  grid-template-rows: min-content min-content;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.AI h2{
+  width: 100%;
+  text-align: center;
+  grid-column: 1 / span 3;
+  grid-row: 1;
+}
+
+.AI button{
+  width: 100%;
+  grid-row: 2;
+}
+
+#section-left .AI {
+	background-color: rgb(255, 144, 130, 0.40);
+  margin-top: .5em;
+}
+
+#section-right .AI {
+	background-color: rgb(70, 72, 62, 0.40);
+  margin-top: .5em;
+}
+
 #section-middle{
   padding: 2em;
   text-align: center;
@@ -312,7 +341,7 @@ h1 img{
 }
 
 .button{
-  margin-top: .75em;
+  margin-top: .5em;
   width: 100%;
 }
 
@@ -324,7 +353,6 @@ h1 img{
   position: relative;
   border-radius: .5em;
 }
-
 
 .hidden{
   display: none;
